--- a/Testing247Media/Testing247Media.csproj
+++ b/Testing247Media/Testing247Media.csproj
@@ -378,6 +378,7 @@
       <DependentUpon>GoogleMapDevTest1.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Marker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
