--- a/Testing247Media/Testing247Media.csproj
+++ b/Testing247Media/Testing247Media.csproj
@@ -381,6 +381,7 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Marker.cs" />
+    <Compile Include="Models\Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnCoordinatesToCodeBehind.aspx.cs">
       <DependentUpon>ReturnCoordinatesToCodeBehind.aspx</DependentUpon>
