--- a/PostCodeToMarkerConverter/App.config
+++ b/PostCodeToMarkerConverter/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="GoogleMapsApiKey" value="AIzaSyDn5scaDriph6nXqc_SQKSh_WgstWO-aGk"/>
+  </appSettings>
+  <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Testing247Media-20160802124104.mdf;Initial Catalog=aspnet-Testing247Media-20160802124104;Integrated Security=True"-->
+    <add name="247" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\mdDB.mdf;Initial Catalog=mdDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
